--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,24 @@
 # Dependencies
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-package-lock.json
+**/node_modules/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Next.js build output
+**/.next/
 
-# Build directories
-/dist
-/build
-/out
+# Public directories
+**/public/
 
-# IDE and editors
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS files
+# Misc
 .DS_Store
-Thumbs.db
+*.pem
 
-# Logs
-logs
-*.log
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Archives
-*.zip
-*.tar.gz
-*.tgz
+# Local env files
+.env*.local
+.env
 
-# Specific to project
-frontend.zip 
+# Typescript
+*.tsbuildinfo 
